When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.


10th September
- USER (Dev) - When a cutting position is set the Z jack motions via the GUI are disabled using a checkbox. This can be over-ridden by the user. 
- USER (Dev) - Slice last section is now removed from the acqusition view and is disabled by default. 


5th September
- USER (Dev) - Stages that need referencing no longer auto-ref when connected. Instead the user must manually select Tools > References Stages from the menu.
- DEVELOPER (Dev) - Zaber linear stages can be used as X/Y. e.g. X-LRM100A-DE51 are verified to work.
- DEVELOPER (Dev) - Option to set a wait time that scales with distance moved during tile scan instead of waiting for stage to report motion completion. To use this, set fixedStageMotionTimeConstant in SIBT_settings.yml to a positive number or tweak hBT.scanner.settings.hardware.fixedStageMotionTimeConstant on an instance of a BT class. The latter will not be saved for future sessions. Zero means that BakingTray will wait for the motion controller to indicate it has completed a motion. 0.05 means BakingTray will wait 0.05 s per mm. So for a 2 mm motion there would be a 0.1 s wait. Note that there is an additional fixed delay on top of this due to ScanImage buffering time between frames. This is a fixed offset and is about 75 to 100 ms. So it could be that for, say, 1 mm motions little additional delay is really needed. This is an EXPERIMENTAL feature and may need further development. **So might be better off in general to initiate a non-blocking motion then wait at the end of the callback for the motion to complete.** 

24th August